--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-app",
+  "name": "nothing-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
